fixed the gap in mobile menu

--- a/src/App.css
+++ b/src/App.css
@@ -124,7 +124,7 @@
   .App-header {
     justify-content: flex-start;
     position: relative;
-    height: 40px;
+    height: 80px;
   }
 }
 
